use CDNs in the demo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <title>&lt;pj-sortable-tiles-editor&gt;</title>
 
   <!-- Importing Web Component's Polyfill -->
-  <script src="bower_components/platform/platform.js"></script>
-  <script src="bower_components/polymer/polymer.js"></script>
+  <!--<script src="bower_components/platform/platform.js"></script>-->
+  <!--<script src="bower_components/polymer/polymer.js"></script>-->
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/polymer/0.2.2/platform.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/polymer/0.2.2/polymer.js"></script>
 
   <!-- Importing Custom Elements -->
-  <link rel="import" href="bower_components/pj-sortable-tiles/src/pj-sortable-tiles.html">
+  <!--<link rel="import" href="bower_components/pj-sortable-tiles/src/pj-sortable-tiles.html">-->
+  <link rel="import" href="https://rawgit.com/Polyjuice/pj-sortable-tiles/gh-pages/src/pj-sortable-tiles.html">
   <link rel="import" href="src/pj-sortable-tiles-editor.html">
 
   <style>
