bugfix: juicy-tree can't perform first highlightBranch

--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -405,6 +405,7 @@
         },
         treeRefresh: function() {
           this.tree = [this.sortableTilesModel.setup];
+          Platform.performMicrotaskCheckpoint(); //this is needed because otherwise juicy-tree can't perform first highlightBranch
         }
       });
     })();
