create svg elements when element-selector is created

--- a/src/element-selector.html
+++ b/src/element-selector.html
@@ -120,7 +120,7 @@
         strokeColor: "#000000",
         strokeOffset: 1,
         focused: null,
-        attached: function(){
+        created: function(){
           if(!svg1) {
             svg1 = CreateMask("#FFFFFF", 0.5);
             svg2 = CreateMask("#000000", 0.5);
