now mouse clicking with Shift or Mac Cmd button also adds to selection

--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -200,7 +200,7 @@
               this.sortableTilesModel = this.highlightedElement.parentNode;
               this.treeRefresh();
               var highlightedItem = this.sortableTilesModel.items[ this.sortableTilesModel.elements.indexOf(this.highlightedElement) ];
-              if (ev.ctrlKey) {
+              if (ev.ctrlKey || ev.metaKey || ev.shiftKey) {
                 //expand group
                 this.selectedItems.push(highlightedItem);
                 this.selectedElements.push(this.highlightedElement);
