--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -64,13 +64,8 @@
     </style>
     <div class="{{ {editablesContainer: true, disabled: !editedItem} | tokenList }}">
       <div class="editableGroup">
-        <button class="{{ {active: selectionMode} | tokenList }}" on-click="{{toggleSelectionMode}}">✎ Selection mode</button>
-        <button title="Move selected elements to the same group (CTRL+M)" disabled?="{{selectedItems.length < 1}}" on-click="{{moveSelectionToEditedItemContainer}}">⧉ Merge groups</button>
+        <button title="Move selected elements to the same group (CTRL+M)" disabled?="{{selectedItems.length < 1}}" on-click="{{moveSelectionToEditedItemContainer}}">⧉ Move to group</button>
         <button title="Create a new group from selected elements (CTRL+G)" disabled?="{{selectedItems.length < 1}}" on-click="{{newGroupFromSelection}}">⧈ New group</button>
-      </div>
-
-      <div class="editableGroup">
-        <button class="editable" on-click="{{editContainer}}" disabled?="{{!editedItem.container}}">↰ Select container</button>
       </div>
 
       <template if="{{editedItem.items}}">
@@ -371,9 +366,6 @@
         },
         priorityDecrease: function () {
           this.sortableTilesModel.reprioritizeItem(this.editedItem, false);
-        },
-        editContainer: function () {
-          this.editedItem = this.editedItem.container;
         },
         deleteContainer: function () {
           var container = this.editedItem.container;
