--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -1,5 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
+<link rel="import" href="../../juicy-popover/src/juicy-popover.html">
+<link rel="import" href="juicy-color-picker.html">
 <link rel="import" href="juicy-tree.html">
 
 <polymer-element name="juicy-tiles-editor" attributes="selectionMode">
@@ -41,6 +43,21 @@
         box-shadow: inset 0 0 10px #000000;
       }
 
+      button.color {
+        border: 1px solid #bbb;
+        background: #bbb;
+        padding: 4px 2px;
+      }
+
+      .expandable {
+        background: #fff;
+        border: 1px solid rgba(0, 0, 0, .2);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+        padding: 5px;
+        width: 144px;
+        white-space: normal;
+      }
+
       h4 {
         margin: 0;
         display: inline;
@@ -77,13 +94,15 @@
           <h4>Container <code>{{editedItem.name}}</code></h4>
         </div>
 
-        <div class="editableGroup"><label>Background <input class="val" on-blur="{{refresh}}" value="{{editedItem.background}}"></label>
-          <button class="editable" on-click="{{setBackground}}" style="background: transparent; color: red">╱</button>
-          <button class="editable" on-click="{{setBackground}}" style="background: #EEE"></button>
-          <button class="editable" on-click="{{setBackground}}" style="background: #DDD"></button>
-          <button class="editable" on-click="{{setBackground}}" style="background: #CCC"></button>
-          <button class="editable" on-click="{{setBackground}}" style="background: #BBB"></button>
-          <button class="editable" on-click="{{setBackground}}" style="background: #AAA"></button>
+        <div class="editableGroup"><label>Background</label>
+          <juicy-popover>
+            <span class="handle">
+              <button class='color' style='background: {{editedItem.background || "transparent"}}'></button>
+            </span>
+            <div class="expandable">
+              <juicy-color-picker value="{{editedItem.background}}" on-juicy-color-picker-value-changed="{{refresh}}"></juicy-color-picker>
+            </div>
+          </juicy-popover>
         </div>
 
         <div class="editableGroup">
@@ -371,10 +390,6 @@
           var container = this.editedItem.container;
           this.sortableTilesModel.deleteContainer(this.editedItem);
           this.editedItem = container;
-        },
-        setBackground: function (ev) {
-          this.editedItem.background = ev.target.style.background;
-          this.sortableTilesModel.refresh();
         },
         editedItemChanged: function() {
           var element;
