fix selection when selecting a nested tiles element

--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -462,6 +462,9 @@
               Object.defineProperty(tree, "items", {
                 value: [nested.setup]
               });
+              Object.defineProperty(nested.setup, "container", {
+                value: tree
+              });
             }
 
             if (tree.items) {
