Example for issue #19

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
         </juicy-tiles>
       </section>
     </div>
+    <juicy-tiles setup="{{setup2}}">
+      <div>Subitem 0 </div>
+      <div>
+        <button>Subitem 1</button>
+      </div>
+      <div>
+        <input value="Subitem2">
+      </div>
+      <section>Subitem 3</section>
+    </juicy-tiles>
   </juicy-tiles>
 </template>
 <script type="text/javascript">
