tree works again! remove Polymer UI Elements from juicy-tree

--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -468,6 +468,7 @@
         },
         treeActivateBranch: function (ev) {
           this.ignoreHightlight = true;
+          this.editedTiles = ev.detail.tiles;
           this.editedItem = ev.detail.branch;
         },
         /**
