--- a/src/juicy-tiles-editor.html
+++ b/src/juicy-tiles-editor.html
@@ -131,9 +131,10 @@
 
     <div class="sidebar">
       <h1>Elements</h1>
-      <juicy-tiles-tree id="treeView" tree="{{ tree }}" on-juicy-tiles-tree-activate="{{treeActivateBranch}}"
-        on-juicy-tiles-tree-selection-add="{{selectionAdd}}"
-        on-juicy-tiles-tree-selection-remove="{{selectionRemove}}"></juicy-tiles-tree>
+      <juicy-tiles-tree id="treeView" tree="{{ tree }}"
+        on-juicy-tiles-tree-highlight="{{treeHighlightAction}}"
+        on-juicy-tiles-tree-highlight-extend="{{treeHighlightExtendAction}}"
+        on-juicy-tiles-tree-highlight-remove="{{treeHighlightRemoveAction}}"></juicy-tiles-tree>
     </div>
 
     <juicy-highlight id="elementEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
@@ -272,11 +273,11 @@
                 //expand group
                 var index = this.selectedItems.indexOf(highlightedItem);
                 if(index == -1) {
-                  this.selectionAdd(highlightedItem);
+                  this.treeHighlightExtendAction(highlightedItem);
                   this.$.treeView.highlightBranch(highlightedItem, true);
                 }
                 else {
-                  this.selectionRemove(highlightedItem);
+                  this.treeHighlightRemoveAction(highlightedItem);
                   this.$.treeView.unhighlightBranch(highlightedItem);
                 }
                 this.$.elementSelected.show(this.selectedElements);
@@ -488,7 +489,7 @@
           this.selectedElements.length = 0;
           this.ignoreHightlight = false;
         },
-        treeActivateBranch: function (ev) {
+        treeHighlightAction: function (ev) {
           this.ignoreHightlight = true;
           this.editedTiles = ev.detail.tiles;
           this.editedItem = ev.detail.branch;
@@ -567,7 +568,7 @@
           // notify observer/two-way-binding/tempalte only once
           this.tree = tree;
         },
-        selectionAdd: function(item) {
+        treeHighlightExtendAction: function(item) {
           if(item.detail) {  //is tree event
             item = item.detail.branch;
           }
@@ -576,7 +577,7 @@
           this.selectedElements.push(elem);
           this.$.elementSelected.show(this.selectedElements);
         },
-        selectionRemove: function(item) {
+        treeHighlightRemoveAction: function(item) {
           if(item.detail) {  //is tree event
             item = item.detail.branch;
           }
